<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:id="@+id/cvExoPlayer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/padding"
                app:cardBackgroundColor="@android:color/black"
                android:layout_gravity="center">

                <com.google.android.exoplayer2.ui.SimpleExoPlayerView
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:id="@+id/exoPlayer"
                    app:resize_mode="fixed_height"
                    app:auto_show="false"
                    app:controller_layout_id="@layout/exo_playback_control_view"/>

                <ImageView
                    android:id="@+id/imgNoVideo"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:background="@color/textColor"
                    android:contentDescription="@string/empty_space_video"
                    android:visibility="gone" />

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/tvShortDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/recipe_step_instruction"
                android:gravity="center"
                android:textSize="25sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/padding"
                android:layout_marginRight="@dimen/padding"
                android:orientation="horizontal"
                android:weightSum="6">

                <ImageView
                    android:id="@+id/imgStepPrevious"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:contentDescription="@string/navigation_previous_button"
                    android:gravity="center"
                    android:src="@drawable/ic_chevron_left"
                    android:tint="@color/gray" />

                <LinearLayout
                    android:id="@+id/description_linear_layout_view"
                    android:layout_width="0dp"
                    android:layout_height="200dp"
                    android:layout_weight="4">

                    <TextView
                        android:id="@+id/tvDescription"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="@string/goofy_text"
                        android:textSize="@dimen/padding"
                        tools:ignore="SpUsage" />
                </LinearLayout>

                <ImageView
                    android:id="@+id/imgStepNext"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="50dp"
                    android:gravity="center"
                    android:layout_gravity="center_vertical"
                    android:contentDescription="@string/navigation_next_button"
                    android:src="@drawable/ic_chevron_right"
                    android:tint="@color/gray" />

            </LinearLayout>
        </LinearLayout>
</LinearLayout>