<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parent_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="25dp"
    android:layout_marginTop="@dimen/half_half_padding"
    android:layout_marginEnd="25dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal"
        tools:ignore="UseCompoundDrawables">

        <TextView
            android:id="@+id/tvAddToWidgets"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:padding="5dp"
            android:paddingEnd="20dp"
            android:text="@string/add_to_widget"
            android:textAlignment="textEnd"
            tools:ignore="RtlCompat,RtlSymmetry" />

        <ImageView
            android:id="@+id/imgAddToWidget"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/add_to_widget"
            android:src="@drawable/ic_favorite_border" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/chil1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="10">

        <TextView
            android:id="@+id/text_ingredients"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/half_half_padding"
            android:layout_weight="6.7"
            android:text="@string/ingredients"
            android:textColor="@color/background"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/quantity"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.6"
            android:paddingEnd="@dimen/half_padding"
            android:text="@string/quantity"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/measure"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/measure" />

    </LinearLayout>

    <View
        android:id="@+id/view_line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray" />

    <GridView
        android:id="@+id/ingredients_grid_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:numColumns="1"
        android:textAlignment="center"
        android:textSize="20sp" />
</LinearLayout>
